--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,16 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="main_color">#B1DFFF</color>
+    <color name="sub_color">#5AB4F4</color>
+
+    <color name="grey">#D9D9D9</color>
+    <color name="text_grey">#595E6A</color>
+    <color name="line_grey">#F0F0F0</color>
+
+    <color name="navi_default">#AEB2B8</color>
+
+    <color name="selected_color">#1467A1</color> <!-- 선택된 버튼 색상 -->
+    <color name="unselected_color">#BFBFBF</color> <!-- 선택되지 않은 버튼 색상 -->
 </resources>
