--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Sloplo" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowBackground">@color/white</item>
+        <item name="colorOnBackground">@color/navi_default</item>
+        <item name="colorOnSurface">@color/text_grey</item>
+        <item name="android:statusBarColor">@color/main_color</item>
     </style>
 
     <style name="Theme.Sloplo" parent="Base.Theme.Sloplo" />
+
+    <!-- Bottom Navi -->
+    <style name="Theme.Navi.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/white</item>
+    </style>
 </resources>
