--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,14 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
 
+    <!-- 구분선 -->
+    <View
+        android:id="@+id/view_line_navi"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_grey"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"/>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
@@ -22,6 +30,10 @@
         android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/white"
+        app:itemIconTint="@drawable/nav_item_color_state"
+        app:itemTextColor="@drawable/nav_item_color_state"
+        app:itemBackground="@android:color/transparent"
+        app:itemActiveIndicatorStyle="@style/Theme.Navi.Indicator"
         app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
