--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/main_color"
     tools:context=".HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="HomeFragment"
-        android:gravity="center"/>
+    <!-- 앱 아이콘 -->
+    <ImageView
+        android:id="@+id/ic_app_sloplo"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/ic_app_default"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <!-- 플로깅 기록 섹션 -->
+    <LinearLayout
+        android:id="@+id/layout_plogging_record"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ic_app_sloplo">
+
+        <include
+            layout="@layout/item_home_plogging"
+            app:layout_constraintTop_toBottomOf="@+id/tv_home_title" />
+
+    </LinearLayout>
+
+    <!-- 캐릭터 이미지 -->
+    <ImageView
+        android:id="@+id/iv_app_character"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/bg_square_white_grey_15"
+        android:layout_marginTop="55dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_plogging_record" />
+
+    <!-- 플로깅 시작하기 버튼 -->
+    <FrameLayout
+        android:id="@+id/btn_home_plogging"
+        android:layout_width="180dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_app_character">
+
+        <ImageView
+            android:id="@+id/iv_home_challenge_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/bg_square_white_grey_30" />
+
+        <TextView
+            android:id="@+id/tv_home_challenge_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/noto_sans_kr_semi_bold"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:text="플로깅 시작하기"
+            android:textSize="18sp" />
+    </FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
