--- a/app/src/main/res/layout/fragment_plogging.xml
+++ b/app/src/main/res/layout/fragment_plogging.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JournalFragment">
+    android:background="@color/main_color"
+    tools:context=".PloggingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_plogging_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="PloggingFragment"
-        android:gravity="center"/>
+        android:name="com.naver.maps.map.MapFragment" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
