--- a/app/src/main/res/layout/fragment_plogging.xml
+++ b/app/src/main/res/layout/fragment_plogging.xml
@@ -13,4 +13,42 @@
         android:layout_height="match_parent"
         android:name="com.naver.maps.map.MapFragment" />
 
+    <ImageView
+        android:id="@+id/btn_plogging_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="20dp"/>
+
+    <!-- 플로깅 종료하기 버튼 -->
+    <FrameLayout
+        android:id="@+id/btn_plogging_end"
+        android:layout_width="180dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/iv_plogging_end_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_square_sub_color_15"/>
+
+        <TextView
+            android:id="@+id/tv_plogging_end_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
+            android:fontFamily="@font/noto_sans_kr_semi_bold"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:text="플로깅 종료"
+            android:textSize="18sp" />
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
