--- a/app/src/main/res/layout/button_log_write.xml
+++ b/app/src/main/res/layout/button_log_write.xml
@@ -14,7 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_weight="1"
-        android:background="@drawable/round_button"
+        android:background="@drawable/btn_round_button"
         android:src="@drawable/ic_camera"
         android:contentDescription="카메라"
         android:scaleType="centerInside"
@@ -26,7 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_weight="1"
-        android:background="@drawable/round_button"
+        android:background="@drawable/btn_round_button"
         android:src="@android:drawable/ic_menu_gallery"
         android:contentDescription="갤러리"
         android:scaleType="centerInside"
