--- a/app/src/main/res/layout/day_view.xml
+++ b/app/src/main/res/layout/day_view.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:textColor="@android:color/black"
+        android:background="@android:color/transparent"
         android:textSize="14sp" />
 
     <ImageView
@@ -18,6 +19,6 @@
         android:layout_height="18dp"
         android:layout_gravity="top|end"
         android:layout_margin="4dp"
-        android:src="@drawable/clover_icon"
+        android:src="@drawable/ic_unit_24"
         android:visibility="gone" />
 </FrameLayout>
