--- a/app/src/main/res/layout/fragment_journal.xml
+++ b/app/src/main/res/layout/fragment_journal.xml
@@ -16,30 +16,78 @@
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:includeFontPadding="false"/>
 
-    <!-- 캘린더뷰 -->
-    <com.kizitonwose.calendar.view.CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="0dp"
+    <!-- 뒤로가기 버튼 -->
+    <ImageView
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:src="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="20dp"/>
+
+    <!-- 목록으로 이동 버튼 -->
+    <Button
+        android:id="@+id/buttonLogList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="목록으로 이동"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginLeft="12dp"
+        android:textAllCaps="false"
+        android:backgroundTint="@android:color/white"
+        android:textColor="@android:color/black"
+        android:includeFontPadding="false"
         app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:cv_daySize="48dp" />
+        android:fontFamily="@font/noto_sans_kr_regular"/>
+
+    <LinearLayout
+        android:id="@+id/calendarContainer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@android:color/white"
+        android:padding="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/buttonLogList"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- 캘린더 뷰 -->
+        <com.kizitonwose.calendar.view.CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cv_dayViewResource="@layout/day_view"
+            app:cv_monthHeaderResource="@layout/month_header_view" />
+    </LinearLayout>
+
+    <!-- 기록 요약 뷰 + 상세보기 버튼 (오른쪽 위 오버레이) -->
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/calendarContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
     <!-- 기록 요약 뷰 -->
     <LinearLayout
         android:id="@+id/logDetailLayout"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
-        android:background="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/calendarView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:padding="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="12dp"
+        android:background="@android:color/white">
 
         <TextView
             android:id="@+id/logDateText"
@@ -70,6 +118,22 @@
             android:text="오늘의 총 쓰레기: 50개"
             android:textColor="#666666"
             android:layout_marginTop="2dp" />
-    </LinearLayout>
+        </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/buttonDetail"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="end|top"
+        android:padding="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@android:color/transparent"
+        android:contentDescription="상세보기"
+        android:src="@drawable/ic_arrow_forward" />
+    </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
