--- a/app/src/main/res/layout/fragment_log_write.xml
+++ b/app/src/main/res/layout/fragment_log_write.xml
@@ -73,6 +73,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:text="도착지점: 주소 로딩 중..."
                 android:textSize="14sp" />
 
