--- a/app/src/main/res/layout/item_recomend_volunteer.xml
+++ b/app/src/main/res/layout/item_recomend_volunteer.xml
@@ -17,7 +17,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:maxLines="1" />
+        android:maxLines="1"
+        android:fontFamily="@font/noto_sans_kr_semi_bold"
+        android:includeFontPadding="false"/>
 
     <TextView
         android:id="@+id/tv_recommend_description"
@@ -28,7 +30,9 @@
         app:layout_constraintTop_toBottomOf="@id/tv_recommend_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:maxLines="2" />
+        android:maxLines="2"
+        android:fontFamily="@font/noto_sans_kr_semi_bold"
+        android:includeFontPadding="false"/>
 
     <TextView
         android:id="@+id/tv_recommend_location"
@@ -38,7 +42,9 @@
         android:textSize="10sp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tv_recommend_description"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/noto_sans_kr_semi_bold"
+        android:includeFontPadding="false"/>
 
     <TextView
         android:id="@+id/tv_recommed_separator"
@@ -48,7 +54,9 @@
         android:textSize="10sp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tv_recommend_description"
-        app:layout_constraintStart_toEndOf="@id/tv_recommend_location" />
+        app:layout_constraintStart_toEndOf="@id/tv_recommend_location"
+        android:fontFamily="@font/noto_sans_kr_semi_bold"
+        android:includeFontPadding="false"/>
 
     <TextView
         android:id="@+id/tv_recommend_date"
@@ -58,6 +66,8 @@
         android:textSize="10sp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tv_recommend_description"
-        app:layout_constraintStart_toEndOf="@id/tv_recommed_separator" />
+        app:layout_constraintStart_toEndOf="@id/tv_recommed_separator"
+        android:fontFamily="@font/noto_sans_kr_semi_bold"
+        android:includeFontPadding="false"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
