feat: 뒤로가기 동작 구현 #34

--- a/app/src/main/res/layout/fragment_volunteer.xml
+++ b/app/src/main/res/layout/fragment_volunteer.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_color"
-    tools:context=".VolunteerFragment">
+    tools:context=".VolunteerFragment"
+    android:id="@+id/fragment_container_view" >
 
     <!-- 앱 아이콘 -->
     <ImageView
