--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,9 +39,10 @@
     <ImageView
         android:id="@+id/iv_app_character"
         android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_height="0dp"
+        android:layout_marginVertical="50dp"
         android:src="@drawable/bg_square_white_grey_15"
-        android:layout_marginTop="55dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_home_plogging"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_plogging_record" />
@@ -51,7 +52,7 @@
         android:id="@+id/btn_home_plogging"
         android:layout_width="180dp"
         android:layout_height="55dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginBottom="160dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
