--- a/app/src/main/res/layout/fragment_journal.xml
+++ b/app/src/main/res/layout/fragment_journal.xml
@@ -77,6 +77,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintTop_toBottomOf="@id/calendarContainer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
     <!-- 기록 요약 뷰 -->
     <LinearLayout
         android:id="@+id/logDetailLayout"
@@ -119,6 +130,7 @@
             android:textColor="#666666"
             android:layout_marginTop="2dp" />
         </LinearLayout>
+
 
     <ImageButton
         android:id="@+id/buttonDetail"
