--- a/app/src/main/res/layout/fragment_journal.xml
+++ b/app/src/main/res/layout/fragment_journal.xml
@@ -56,6 +56,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="12dp"
+        android:radius="16dp"
         app:layout_constraintTop_toBottomOf="@id/buttonLogList"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -69,83 +70,81 @@
             app:cv_monthHeaderResource="@layout/month_header_view" />
     </LinearLayout>
 
-    <!-- 기록 요약 뷰 + 상세보기 버튼 (오른쪽 위 오버레이) -->
-    <FrameLayout
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/logDateText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="기록을 확인할 날짜를 선택해 주세요"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintTop_toBottomOf="@id/calendarContainer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintStart_toStartOf="parent"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toBottomOf="@id/calendarContainer"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-    <!-- 기록 요약 뷰 -->
-    <LinearLayout
-        android:id="@+id/logDetailLayout"
+    <!--요약뷰-->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/logViewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="12dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="12dp"
-        android:background="@android:color/white">
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@id/calendarContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-            android:id="@+id/logDateText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2025.04.11 (금) 2.5km"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+    <!-- 기록 요약 뷰 + 상세보기 버튼 (오른쪽 위 오버레이) -->
+<!--    <FrameLayout-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/calendarContainer"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent">-->
 
-        <TextView
-            android:id="@+id/logTitleText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="담배꽁초 50개 주움"
-            android:layout_marginTop="4dp" />
+<!--    &lt;!&ndash; 기록 요약 뷰 &ndash;&gt;-->
+<!--    <LinearLayout-->
+<!--        android:id="@+id/logDetailLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="vertical"-->
+<!--        android:padding="12dp"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        android:background="@android:color/white">-->
 
-        <TextView
-            android:id="@+id/logStartPlaceText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="📍 반포한강공원 | 50분"
-            android:layout_marginTop="2dp" />
+<!--        <TextView-->
+<!--            android:id="@+id/logDateText"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="2025.04.11 (금) 2.5km"-->
+<!--            android:textSize="16sp"-->
+<!--            android:textStyle="bold" />-->
 
-        <TextView
-            android:id="@+id/logTrashText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="오늘의 총 쓰레기: 50개"
-            android:textColor="#666666"
-            android:layout_marginTop="2dp" />
-        </LinearLayout>
+<!--        <TextView-->
+<!--            android:id="@+id/logTitleText"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="담배꽁초 50개 주움"-->
+<!--            android:layout_marginTop="4dp" />-->
 
+<!--        <TextView-->
+<!--            android:id="@+id/logStartPlaceText"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="📍 반포한강공원 | 50분"-->
+<!--            android:layout_marginTop="2dp" />-->
 
-    <ImageButton
-        android:id="@+id/buttonDetail"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_gravity="end|top"
-        android:padding="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:background="@android:color/transparent"
-        android:backgroundTint="@android:color/transparent"
-        android:contentDescription="상세보기"
-        android:src="@drawable/ic_arrow_forward" />
-    </FrameLayout>
+<!--        <TextView-->
+<!--            android:id="@+id/logTrashText"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="오늘의 총 쓰레기: 50개"-->
+<!--            android:textColor="#666666"-->
+<!--            android:layout_marginTop="2dp" />-->
+<!--        </LinearLayout>-->
+<!--    </FrameLayout>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
