feat: 머지 피드백 반영 #28

--- a/app/src/main/res/layout/button_log_write.xml
+++ b/app/src/main/res/layout/button_log_write.xml
@@ -34,7 +34,7 @@
 
     <!-- 저장 -->
     <Button
-        android:id="@+id/button_save"
+        android:id="@+id/btnSave"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_weight="1"
