--- a/app/src/main/res/layout/layout_plogging_record_history.xml
+++ b/app/src/main/res/layout/layout_plogging_record_history.xml
@@ -58,8 +58,8 @@
         android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
         android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_total_time"
-        app:layout_constraintStart_toStartOf="@id/tv_total_time" />
+        app:layout_constraintTop_toBottomOf="@id/tv_total_trash"
+        app:layout_constraintStart_toStartOf="@id/tv_total_trash" />
 
     <!-- 수집한 쓰레기 -->
     <TextView
@@ -71,7 +71,7 @@
         android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
         android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_total_distance"
+        app:layout_constraintTop_toBottomOf="@id/tv_total_time"
         app:layout_constraintStart_toStartOf="@id/tv_total_time"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
